# wallmgr

./: .gitignore  CLEANUP_FINAL.md  COMPLETE_REFACTOR.md  Cargo.toml  FINAL_PROJECT_SUMMARY.md  FINAL_STATUS.md  LICENSE  README.md  REFACTOR_PLAN.md  START_HERE.md  test_connector.rs  test_filter.py
backend/adapters/: Cargo.toml
backend/adapters/src/: adapter.rs  desktop.rs  detector.rs  lib.rs  wayland.rs  x11.rs
backend/api/: Cargo.toml
backend/api/src/: handlers.rs  lib.rs  routes.rs  state.rs  websocket.rs
backend/connectors/: Cargo.toml
backend/connectors/src/: booru.rs  danbooru.rs  filter.rs  gelbooru.rs  konachan.rs  lib.rs  safebooru.rs  wallhaven.rs  yandere.rs
backend/core/: Cargo.toml
backend/core/src/: config.rs  database.rs  error.rs  lib.rs  types.rs
backend/daemon/: Cargo.toml
backend/daemon/src/: main.rs
backend/renderers/: Cargo.toml
backend/renderers/src/: lib.rs  renderer.rs  spine.rs  video.rs  wallpaper_engine.rs
cli/: Cargo.toml
cli/src/: main.rs
docs/: 3_TYPES_EXPLAINED.md  BOORU_WALLPAPER_SEARCH.md  FORMATS_EXPLAINED.md  IMPLEMENTATION_GUIDE.md  README.md  RENDERERS_TECHNICAL.md  WALLPAPER_ENGINE_VS_SPINE.md
scripts/: build.sh  install.sh
systemd/: wallmgr.service
wallmgr-gui/: .gitignore  Cargo.toml  DEVELOPMENT.md  FINAL_SUMMARY.md  FIXES_APPLIED.md  LOCAL_TAB_FINAL.md  LOCAL_TAB_UPDATE.md  NEW_PROVIDERS.md  QUICKSTART.md  README.md  TAB_LAYOUT_FIXED.md  TROUBLESHOOTING.md  run-debug.sh  run-wsl.sh  test-wslg.sh
wallmgr-gui/src/: main.rs
wallmgr-gui/src/components/: mod.rs
wallmgr-gui/src/models/: image_source.rs  mod.rs  provider.rs  settings.rs  wallpaper.rs
wallmgr-gui/src/tabs/: collection_tab.rs  local_tab.rs  mod.rs  online_tab.rs  online_tab_old.rs  settings_tab.rs
wallmgr-gui/src/utils/: download.rs  fs.rs  mod.rs
