[workspace]
members = [
    "backend/core",
    "backend/adapters",
    "backend/renderers",
    "backend/connectors",
    # "backend/api",      # Temporarily disabled - needs async DB refactor
    # "backend/daemon",   # Temporarily disabled - depends on API
    "cli",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Wallmgr Contributors"]
license = "MIT"
repository = "https://github.com/dungdinhmanh/wallmgr"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-rusqlite = "0.6"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Image processing
image = "0.25"
webp = "0.3"

# Video processing
ffmpeg-next = "7.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
walkdir = "2.5"
regex = "1.10"
lazy_static = "1.5"

# System integration
nix = { version = "0.29", features = ["process", "signal"] }

# Hashing
sha2 = "0.10"