[package]
name = "wallmgr-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "wallmgr"
path = "src/main.rs"

[dependencies]
wallmgr-core = { path = "../backend/core" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

# CLI args
clap.workspace = true
colored.workspace = true

# HTTP client for daemon communication
reqwest = { workspace = true, features = ["json"] }

# UUID parsing
uuid.workspace = true

# Human readable formatting
human_bytes = "0.4"