[package]
name = "wallmgr-gui"
version = "1.0.0"
edition = "2021"

[workspace]

[dependencies]
eframe = { version = "0.29", features = ["persistence", "x11"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders", "image"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
poll-promise = "0.3"
dirs = "5.0"
walkdir = "2.4"
urlencoding = "2.1"
webbrowser = "1.0"
uuid = { version = "1.10", features = ["v4"] }
env_logger = "0.11"

[dev-dependencies]
