[package]
name = "wallmgr-adapters"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
wallmgr-core = { path = "../core" }

anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

# For process execution
nix.workspace = true

# For X11 detection
x11rb = { version = "0.13", features = ["all-extensions"], optional = true }

[features]
default = ["x11"]
x11 = ["x11rb"]
