[package]
name = "wallmgr-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
sqlx.workspace = true
rusqlite.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
dirs.workspace = true
tracing.workspace = true
image.workspace = true
tokio.workspace = true

# Additional
blake3 = "1.5"
