[package]
name = "wallmgr-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "wallmgr-daemon"
path = "src/main.rs"

[dependencies]
wallmgr-core = { path = "../core" }
wallmgr-api = { path = "../api" }
wallmgr-adapters = { path = "../adapters" }

tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

# Web server
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Signal handling
nix.workspace = true

# Database
rusqlite.workspace = true

# Args
clap = { version = "4.5", features = ["derive"] }

# Hashing
sha2 = "0.10"