[package]
name = "wallmgr-renderers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
wallmgr-core = { path = "../core" }

anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

# For process management
nix.workspace = true

# Path expansion
shellexpand = "3.1"
